src/test/deca/syntax/valid/synt/print2.deca
// Description:
//    Programme pour tester println
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    int a=2,b=2;
    print(a,b);
}
