src/test/deca/syntax/invalid/synt/opArith.deca
// Description:
//    Programme opArithmetique
//
// Resultats:
//
// Historique:
//    cree le 01/01/2022

{
    int a=4*+8;

}
